unpackaged/main/default/objects/litify_time__lit_Billing_Code_Set__c/litify_time__lit_Billing_Code_Set__c.object-meta.xml
<CustomObject>
    <label>Billing Code Set</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Code Sets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>