unpackaged/main/default/objects/litify_time__lit_Billing_Code_Set__c/fields/litify_time__lit_Number_of_Phase_Codes__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Number_of_Phase_Codes__c</fullName>
    <label>Number of Phase Codes</label>
    <summaryFilterItems>
        <field>litify_time__lit_Billing_Code__c.litify_time__lit_Is_Phase__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>litify_time__lit_Billing_Code__c.litify_time__lit_Set__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>