unpackaged/main/default/objects/litify_time__lit_Billing_Code_Set__c/fields/litify_time__lit_Type__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Activity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>